--- a/assignment2/figma2.css
+++ b/assignment2/figma2.css
@@ -292,3 +292,91 @@ line-height: 20px;
 .logoss{
     width: 150px;
 }
+/* page 8 */
+.page_8{
+    padding: 90px 150px;
+    display: flex;
+    background-color: #043873;
+    color: white;
+    justify-content: space-around;
+    background-image: url(Element\ 2.png);
+}
+.page_8_1 h1{
+    padding-top: 10px;
+    font-size: 50px;
+    padding-bottom: 20px;
+}
+.page_8_1 p{
+    font-size: 14px;
+    padding-bottom: 50px;
+}
+.image_8 img{
+    width: 420px;
+}
+.button_1 button{
+    height: 40px;
+    width: 120px;
+    border-radius: 4px;
+    border-style: none;
+    background-color: #4F9CF9;
+    color: white;   
+}
+/* page 9 */
+.page_9{
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+.heading{
+    text-align: center;
+    font-size: 24px;
+}
+.para_0{
+    display: flex;
+    color: white;
+    margin-left: 150px;
+    padding: 2px;
+    padding-bottom: 80px;
+}
+.para_0 img{
+    padding: 10px 1px 30px 20px;
+    
+}
+.para_0 h3{
+    color: #043873;
+}
+.para_1_1{
+    display: flex;
+}
+.para_1_2{
+    display: flex;
+}
+.para_2{
+    background: #4F9CF9;
+    border-radius: 9px;
+    margin-left: 20px;
+    padding: 30px 20px 40px 20px;
+}
+.textt1 h3{
+    color: black;
+}
+.para_1{
+    color: black;
+    box-shadow: 10px 15px 20px rgb(0, 0, 0, 0.2);
+    border-radius: 9px;
+    padding: 30px 20px 40px 20px;
+}
+.para_1 p{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.para_2 p{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+/* last page */
+.foot{
+    text-align: center;
+    background-color: #043873;
+    color: white;
+    padding: 130px 10px ;
+}
